# DL4AGX

./: .bazelrc  .clang-format  .clang-tidy  .dazelrc  .gitattributes  .gitignore  .gitmodules  .style.yapf  BUILD  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dazel  README.md  WORKSPACE
AV-Solutions/dcnv4-trt/: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
AV-Solutions/dcnv4-trt/include/: common.cuh  common.h
AV-Solutions/dcnv4-trt/onnx_files/: sim_flash_intern_image_t_1k_224.onnx  sim_flash_intern_image_t_1k_224_fused.onnx
AV-Solutions/dcnv4-trt/plugins/: CMakeLists.txt
AV-Solutions/dcnv4-trt/plugins/dcnv4FusePlugin/: CMakeLists.txt  dcnv4_fuse_offset_plugin.cpp  dcnv4_fuse_offset_plugin.cu  dcnv4_fuse_offset_plugin.h
AV-Solutions/dcnv4-trt/plugins/dcnv4Plugin/: CMakeLists.txt  dcnv4_plugin.cpp  dcnv4_plugin.cu  dcnv4_plugin.h
AV-Solutions/dcnv4-trt/plugins/dcnv4PtxPlugin/: .gitignore  CMakeLists.txt  dcnv4_ptx.cu  dcnv4_ptx.h  dcnv4_stage0_b1.ptx  dcnv4_stage0_b128.ptx  dcnv4_stage1_b1.ptx  dcnv4_stage2_b1.ptx  dcnv4_stage3_b1.ptx
AV-Solutions/dcnv4-trt/src/: main.cpp  preprocess.cu
AV-Solutions/dcnv4-trt/tools/: export_onnx.py  fuse_value_and_offset.py
AV-Solutions/far3d-trt/inference_app/: CMakeLists.txt
AV-Solutions/far3d-trt/inference_app/dependencies/: stb
AV-Solutions/far3d-trt/inference_app/include/: far3d.hpp  layout.hpp  tensor.hpp
AV-Solutions/far3d-trt/inference_app/lib/: common.cpp  far3d.cpp
AV-Solutions/far3d-trt/inference_app/src/: main.cpp
AV-Solutions/streampetr-trt/inference_app/: CMakeLists.txt  README.md  build.sh  main.cpp  visualize.py
AV-Solutions/streampetr-trt/inference_app/include/: memory.cuh
AV-Solutions/streampetr-trt/inference_app/kernels/: memory.cu
AV-Solutions/streampetr-trt/inference_app/model/: .gitattributes
AV-Solutions/uniad-trt/: .gitignore  CMakeLists.txt  README.md  uniad_trt.dockerfile
AV-Solutions/uniad-trt/dependencies/cuOSD/: .gitignore
AV-Solutions/uniad-trt/docker/: requirements.txt
AV-Solutions/uniad-trt/documents/: data_prep.md  env_prep.md  explicit_quantization.md  proj_setup.md  train_export.md
AV-Solutions/uniad-trt/inference_app/: .gitignore  CMakeLists.txt  README.md
AV-Solutions/uniad-trt/inference_app/enqueueV2/: .gitignore  CMakeLists.txt
AV-Solutions/uniad-trt/inference_app/enqueueV2/include/: dtype.hpp  uniad.hpp
AV-Solutions/uniad-trt/inference_app/enqueueV2/src/: visualize.cu
AV-Solutions/uniad-trt/inference_app/enqueueV3/: .gitignore
AV-Solutions/uniad-trt/inference_app/enqueueV3/include/: uniad.hpp
AV-Solutions/uniad-trt/inference_app/include/: tensorrt.hpp  uniad.hpp
AV-Solutions/uniad-trt/inference_app/src/: main.cpp  tensorrt.cpp  uniad.cpp  visualize.cu
AV-Solutions/uniad-trt/inference_app_enqueueV2/: README.md
AV-Solutions/uniad-trt/inference_app_enqueueV2/include/: tensor.hpp
AV-Solutions/uniad-trt/inference_app_enqueueV2/src/: tensorrt.cpp  uniad.cpp
AV-Solutions/uniad-trt/inference_app_enqueueV3/: README.md
AV-Solutions/uniad-trt/inference_app_enqueueV3/include/: post_process.hpp  visualize.hpp
AV-Solutions/uniad-trt/onnx/: uniad_tiny_dummy.onnx
AV-Solutions/uniad-trt/patch/: bevformer_tensorrt.patch  mmdet3d.patch  nuscenes-devkit.patch  plugins-trt10-support.patch  uniad-onnx-export.patch  uniad-tiny-training-support.patch
AV-Solutions/uniad-trt/projects/configs/stage1_track_map/: tiny_imgx0.25_track_map.py
AV-Solutions/uniad-trt/projects/configs/stage2_e2e/: tiny_imgx0.25_e2e.py  tiny_imgx0.25_e2e_dump_trt_input.py  tiny_imgx0.25_e2e_trt_p.py
AV-Solutions/uniad-trt/tools/: CMakeLists.txt  add_bevformer_tensorrt_support.sh  add_onnx_export_support.sh  compile_plugins_x86.sh  export_onnx.py  generate_input_info.py  postprocess_bevformer_tiny_epoch_24_pth.py  postprocess_quantized_uniad.py  prepare_calib_data.py  process_metadata.py  quantize_uniad.py  uniad_export_onnx.sh  uniad_prepare_calib_data.sh
AV-Solutions/uniad_tensorrt/inference_app/: CMakeLists.txt  README.md  uniad_trt.dockerfile
AV-Solutions/uniad_tensorrt/inference_app/include/: check.hpp  dtype.hpp  launch.cuh  pre_process.hpp  tensor.hpp  tensorrt.hpp  timer.hpp  uniad.hpp  visualize.hpp
AV-Solutions/uniad_tensorrt/inference_app/src/: main.cpp  pre_process.cu  tensor.cu  tensorrt.cpp  visualize.cu
AV-Solutions/uniad_tensorrt/tools/: CMakeLists.txt  add_onnx_export_support.sh  deploy.py  export_onnx.py  process_metadata.py  run_trtexec.sh  step7.sh  step9.sh  uniad_deploy.sh  uniad_export_onnx.sh
AV-Solutions/vad-trt/app/: .gitignore  CMakeLists.txt  main.cpp  setup_dep.sh
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/: .gitignore  CMakeLists.txt  TEST.md  TODO.md  package.xml
AV-Solutions/vad-trt/app/autoware_tensorrt_vad/config/: ml_package_vad_tiny.param.yaml  vad_tiny.param.yaml
AV-Solutions/vad-trt/app/demo/: .gitignore  config.json  ml_package_vad_tiny.param.yaml  vad_tiny.param.yaml
AV-Solutions/vad-trt/app/lib/: net.h  ros_vad_logger.hpp  tensor.cpp  tensor.h  vad_interface.cpp  vad_interface.hpp  vad_interface_config.hpp  vad_model.cpp  vad_model.hpp  visualize.cpp  visualize.cu  visualize.hpp
AV-Solutions/vad-trt/app/test/: CMakeLists.txt  README.md  mock_vad_logger.hpp  test_config.yaml  test_config_constants.hpp  test_vad_integration.cpp  test_vad_interface.cpp  test_vad_model.cpp
AV-Solutions/vad-trt/plugins/: CMakeLists.txt
AV-Solutions/vad-trt/plugins/multi_scale_deform_attn/: ms_deform_attn.cpp  ms_deform_attn.h  ms_deform_attn_kernel.cu  ms_deform_attn_kernel.cuh  ms_deform_attn_kernel.hpp
AV-Solutions/vad-trt/plugins/rotate/: common.h  rotateKernel.cu  rotateKernel.h  rotate_plugin.cpp  rotate_plugin.h
AV-Solutions/vad-trt/plugins/select_and_pad/: CMakeLists.txt  README.md  common.h  select_and_pad.cpp  select_and_pad.h  select_and_pad_kernel.cu
DEST/: README.md
mtmi/inference_app/: CMakeLists.txt  build.sh  infer.cpp  main.cpp
mtmi/inference_app/include/: cudla_context.h  half.h  kernels.h
mtmi/inference_app/kernels/: kernels.cu
mtmi/inference_app/src/: cudla_context.cpp
(+470 files in other folders)
